# PetShelter

./: CMakeLists.txt  GUI.cpp  GUI.h  GUIAdmin.cpp  GUIAdmin.h  GUIUser.cpp  GUIUser.h  GUIcsvORhtml.cpp  GUIcsvORhtml.h  README.md  dog.cpp  dog.h  dogs.txt  exceptions.h  main.cpp  repo.cpp  repo.h  ui.cpp  ui.h  validators.cpp  validators.h
